

include(ace_system_checks.cmake)

## system_name is used for configure the config.h file
string(TOLOWER ${CMAKE_SYSTEM_NAME} system_name )
configure_file(config.h.in config.h)

if (ACE_HAS_THREADS)
  find_package(Threads)
  find_package(AIO)
else()
  list(APPEND ACE_COMPILE_DEFINITIONS ACE_MT_SAFE=0)
endif()

# Check if _GNU_SOURCE is available.
check_symbol_exists(__GNU_LIBRARY__ "features.h" _GNU_SOURCE)

foreach(opt ACE_HAS_IPV6 ACE_USES_WCHAR GEN_OSTREAM _GNU_SOURCE)
  if (${opt})
    list(APPEND ACE_COMPILE_DEFINITIONS ${opt})
  endif()
endforeach()

if (ACE_HAS_VERSIONED_NAMESPACE)
  list(APPEND ACE_COMPILE_DEFINITIONS ACE_HAS_VERSIONED_NAMESPACE=1)
endif()

if (ACE_INLINE)
  list(APPEND ACE_COMPILE_DEFINITIONS __ACE_INLINE__)
endif()
ace_add_lib(ACE
  OUTPUT_NAME ACE
  PACKAGE ACE
  FOLDER ACE/ace
  DEFINE_SYMBOL ACE_BUILD_DLL
  PUBLIC_COMPILE_DEFINITIONS ${ACE_COMPILE_DEFINITIONS}
  PUBLIC_INCLUDE_DIRECTORIES $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/..>
                             $<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR}/..>
)
ace_target_cxx_sources(ACE
  SOURCE_FILES ACE.cpp
               ACE_crc32.cpp
               ACE_crc_ccitt.cpp
               Activation_Queue.cpp
               Active_Map_Manager.cpp
               Addr.cpp
               Argv_Type_Converter.cpp
               Assert.cpp
               Asynch_IO.cpp
               Asynch_IO_Impl.cpp
               Asynch_Pseudo_Task.cpp
               Atomic_Op.cpp
               Atomic_Op_Sparc.c
               Barrier.cpp
               Base_Thread_Adapter.cpp
               Based_Pointer_Repository.cpp
               Basic_Stats.cpp
               Basic_Types.cpp
               CDR_Base.cpp
               CDR_Size.cpp
               CDR_Stream.cpp
               Capabilities.cpp
               Cleanup.cpp
               Codeset_IBM1047.cpp
               Codeset_Registry.cpp
               Codeset_Registry_db.cpp
               Condition_Attributes.cpp
               Condition_Recursive_Thread_Mutex.cpp
               Condition_Thread_Mutex.cpp
               Configuration.cpp
               Configuration_Import_Export.cpp
               Connection_Recycling_Strategy.cpp
               Containers.cpp
               Copy_Disabled.cpp
               DEV.cpp
               DEV_Addr.cpp
               DEV_Connector.cpp
               DEV_IO.cpp
               DLL_Manager.cpp
               Date_Time.cpp
               Dev_Poll_Reactor.cpp
               Dirent.cpp
               Dirent_Selector.cpp
               Dump.cpp
               Dynamic.cpp
               Dynamic_Message_Strategy.cpp
               Event_Base.cpp
               Event_Handler.cpp
               Event_Handler_Handle_Timeout_Upcall.cpp
               FIFO.cpp
               FIFO_Recv.cpp
               FIFO_Recv_Msg.cpp
               FIFO_Send.cpp
               FIFO_Send_Msg.cpp
               FILE.cpp
               FILE_Addr.cpp
               FILE_Connector.cpp
               FILE_IO.cpp
               File_Lock.cpp
               Flag_Manip.cpp
               Framework_Component.cpp
               Functor.cpp
               Functor_String.cpp
               Get_Opt.cpp
               Handle_Ops.cpp
               Handle_Set.cpp
               Hashable.cpp
               High_Res_Timer.cpp
               ICMP_Socket.cpp
               INET_Addr.cpp
               IOStream.cpp
               IO_Cntl_Msg.cpp
               IO_SAP.cpp
               IPC_SAP.cpp
               Init_ACE.cpp
               LSOCK.cpp
               LSOCK_Acceptor.cpp
               LSOCK_CODgram.cpp
               LSOCK_Connector.cpp
               LSOCK_Dgram.cpp
               LSOCK_Stream.cpp
               Lib_Find.cpp
               Local_Memory_Pool.cpp
               Lock.cpp
               Log_Category.cpp
               Log_Msg.cpp
               Log_Msg_Backend.cpp
               Log_Msg_Callback.cpp
               Log_Msg_IPC.cpp
               Log_Msg_NT_Event_Log.cpp
               Log_Msg_UNIX_Syslog.cpp
               Log_Record.cpp
               Logging_Strategy.cpp
               MEM_Acceptor.cpp
               MEM_Addr.cpp
               MEM_Connector.cpp
               MEM_IO.cpp
               MEM_SAP.cpp
               MEM_Stream.cpp
               MMAP_Memory_Pool.cpp
               Malloc.cpp
               Malloc_Allocator.cpp
               Mem_Map.cpp
               Message_Block.cpp
               Message_Queue.cpp
               Message_Queue_NT.cpp
               Message_Queue_Vx.cpp
               Method_Request.cpp
               Monitor_Admin.cpp
               Monitor_Admin_Manager.cpp
               Monitor_Base.cpp
               Monitor_Control_Action.cpp
               Monitor_Control_Types.cpp
               Monitor_Point_Registry.cpp
               Monitor_Size.cpp
               Monotonic_Time_Policy.cpp
               Msg_WFMO_Reactor.cpp
               Multihomed_INET_Addr.cpp
               Mutex.cpp
               Netlink_Addr.cpp
               Notification_Queue.cpp
               Notification_Strategy.cpp
               Null_Mutex.cpp
               OS_Errno.cpp
               OS_Log_Msg_Attributes.cpp
               OS_NS_Thread.cpp
               OS_NS_arpa_inet.cpp
               OS_NS_ctype.cpp
               OS_NS_devctl.cpp
               OS_NS_dirent.cpp
               OS_NS_dlfcn.cpp
               OS_NS_errno.cpp
               OS_NS_fcntl.cpp
               OS_NS_math.cpp
               OS_NS_netdb.cpp
               OS_NS_poll.cpp
               OS_NS_pwd.cpp
               OS_NS_regex.cpp
               OS_NS_signal.cpp
               OS_NS_stdio.cpp
               OS_NS_stdlib.cpp
               OS_NS_string.cpp
               OS_NS_strings.cpp
               OS_NS_stropts.cpp
               OS_NS_sys_mman.cpp
               OS_NS_sys_msg.cpp
               OS_NS_sys_resource.cpp
               OS_NS_sys_select.cpp
               OS_NS_sys_sendfile.cpp
               OS_NS_sys_shm.cpp
               OS_NS_sys_socket.cpp
               OS_NS_sys_stat.cpp
               OS_NS_sys_time.cpp
               OS_NS_sys_uio.cpp
               OS_NS_sys_utsname.cpp
               OS_NS_sys_wait.cpp
               OS_NS_time.cpp
               OS_NS_unistd.cpp
               OS_NS_wchar.cpp
               OS_NS_wctype.cpp
               OS_QoS.cpp
               OS_TLI.cpp
               OS_Thread_Adapter.cpp
               OS_main.cpp
               Obchunk.cpp
               Object_Manager.cpp
               Object_Manager_Base.cpp
               Obstack.cpp
               PI_Malloc.cpp
               POSIX_Asynch_IO.cpp
               POSIX_CB_Proactor.cpp
               POSIX_Proactor.cpp
               Pagefile_Memory_Pool.cpp
               Parse_Node.cpp
               Ping_Socket.cpp
               Pipe.cpp
               Priority_Reactor.cpp
               Proactor.cpp
               Proactor_Impl.cpp
               Process.cpp
               Process_Manager.cpp
               Process_Mutex.cpp
               Process_Semaphore.cpp
               Profile_Timer.cpp
               RW_Mutex.cpp
               RW_Process_Mutex.cpp
               RW_Thread_Mutex.cpp
               Reactor.cpp
               Reactor_Impl.cpp
               Reactor_Notification_Strategy.cpp
               Reactor_Timer_Interface.cpp
               Read_Buffer.cpp
               Recursive_Thread_Mutex.cpp
               Recyclable.cpp
               Registry.cpp
               Rtems_init.c
               SOCK.cpp
               SOCK_Acceptor.cpp
               SOCK_CODgram.cpp
               SOCK_Connector.cpp
               SOCK_Dgram.cpp
               SOCK_Dgram_Bcast.cpp
               SOCK_Dgram_Mcast.cpp
               SOCK_IO.cpp
               SOCK_Netlink.cpp
               SOCK_SEQPACK_Acceptor.cpp
               SOCK_SEQPACK_Association.cpp
               SOCK_SEQPACK_Connector.cpp
               SOCK_Stream.cpp
               SPIPE.cpp
               SPIPE_Acceptor.cpp
               SPIPE_Addr.cpp
               SPIPE_Connector.cpp
               SPIPE_Stream.cpp
               SString.cpp
               SUN_Proactor.cpp
               SV_Message.cpp
               SV_Message_Queue.cpp
               SV_Semaphore_Complex.cpp
               SV_Semaphore_Simple.cpp
               SV_Shared_Memory.cpp
               Sample_History.cpp
               Sbrk_Memory_Pool.cpp
               Sched_Params.cpp
               Select_Reactor_Base.cpp
               Semaphore.cpp
               Shared_Memory.cpp
               Shared_Memory_MM.cpp
               Shared_Memory_Pool.cpp
               Shared_Memory_SV.cpp
               Sig_Adapter.cpp
               Sig_Handler.cpp
               Signal.cpp
               Sock_Connect.cpp
               Stack_Trace.cpp
               Stats.cpp
               String_Base_Const.cpp
               Synch_Options.cpp
               System_Time.cpp
               TLI.cpp
               TLI_Acceptor.cpp
               TLI_Connector.cpp
               TLI_Stream.cpp
               TP_Reactor.cpp
               TSS_Adapter.cpp
               TTY_IO.cpp
               Task.cpp
               Thread.cpp
               Thread_Adapter.cpp
               Thread_Control.cpp
               Thread_Exit.cpp
               Thread_Hook.cpp
               Thread_Manager.cpp
               Thread_Mutex.cpp
               Thread_Semaphore.cpp
               Throughput_Stats.cpp
               Time_Policy.cpp
               Time_Value.cpp
               Timeprobe.cpp
               Token.cpp
               Trace.cpp
               UNIX_Addr.cpp
               UPIPE_Acceptor.cpp
               UPIPE_Connector.cpp
               UPIPE_Stream.cpp
               WFMO_Reactor.cpp
               WIN32_Asynch_IO.cpp
               WIN32_Proactor.cpp
               ace_wchar.cpp
  HEADER_FILES ACE.h
               ACE_export.h
               ARGV.h
               Abstract_Timer_Queue.h
               Acceptor.h
               Activation_Queue.h
               Active_Map_Manager.h
               Active_Map_Manager_T.h
               Addr.h
               Arg_Shifter.h
               Argv_Type_Converter.h
               Array_Base.h
               Array_Map.h
               Assert.h
               Asynch_Acceptor.h
               Asynch_Connector.h
               Asynch_IO.h
               Asynch_IO_Impl.h
               Asynch_Pseudo_Task.h
               Atomic_Op.h
               Atomic_Op_GCC_T.h
               Atomic_Op_Sparc.h
               Atomic_Op_T.h
               Auto_Event.h
               Auto_Functor.h
               Auto_IncDec_T.h
               Auto_Ptr.h
               Barrier.h
               Base_Thread_Adapter.h
               Based_Pointer_Repository.h
               Based_Pointer_T.h
               Basic_Stats.h
               Basic_Types.h
               Bound_Ptr.h
               CDR_Base.h
               CDR_Size.h
               CDR_Stream.h
               CE_Screen_Output.h
               CORBA_macros.h
               Cache_Map_Manager_T.h
               Cached_Connect_Strategy_T.h
               Caching_Strategies_T.h
               Caching_Utility_T.h
               Capabilities.h
               Cleanup.h
               Cleanup_Strategies_T.h
               Codeset_IBM1047.h
               Codeset_Registry.h
               Codeset_Symbols.h
               Condition_Attributes.h
               Condition_Recursive_Thread_Mutex.h
               Condition_T.h
               Condition_Thread_Mutex.h
               Configuration.h
               Configuration_Import_Export.h
               Connection_Recycling_Strategy.h
               Connector.h
               Containers.h
               Containers_T.h
               Copy_Disabled.h
               Countdown_Time.h
               Countdown_Time_T.h
               DEV.h
               DEV_Addr.h
               DEV_Connector.h
               DEV_IO.h
               DLL_Manager.h
               Date_Time.h
               Default_Constants.h
               Dev_Poll_Reactor.h
               Dirent.h
               Dirent_Selector.h
               Dump.h
               Dump_T.h
               Dynamic.h
               Dynamic_Message_Strategy.h
               Dynamic_Service.h
               Env_Value_T.h
               Event.h
               Event_Base.h
               Event_Handler.h
               Event_Handler_Handle_Timeout_Upcall.h
               Event_Handler_T.h
               FIFO.h
               FIFO_Recv.h
               FIFO_Recv_Msg.h
               FIFO_Send.h
               FIFO_Send_Msg.h
               FILE.h
               FILE_Addr.h
               FILE_Connector.h
               FILE_IO.h
               File_Lock.h
               Flag_Manip.h
               Framework_Component.h
               Framework_Component_T.h
               Free_List.h
               Functor.h
               Functor_String.h
               Functor_T.h
               Future.h
               Future_Set.h
               Get_Opt.h
               Global_Macros.h
               Guard_T.h
               Handle_Gobbler.h
               Handle_Ops.h
               Handle_Set.h
               Hash_Cache_Map_Manager_T.h
               Hash_Map_Manager.h
               Hash_Map_Manager_T.h
               Hash_Map_With_Allocator_T.h
               Hash_Multi_Map_Manager_T.h
               Hashable.h
               High_Res_Timer.h
               ICMP_Socket.h
               INET_Addr.h
               IOStream.h
               IOStream_T.h
               IO_Cntl_Msg.h
               IO_SAP.h
               IPC_SAP.h
               If_Then_Else.h
               Init_ACE.h
               Intrusive_Auto_Ptr.h
               Intrusive_List.h
               Intrusive_List_Node.h
               LOCK_SOCK_Acceptor.h
               LSOCK.h
               LSOCK_Acceptor.h
               LSOCK_CODgram.h
               LSOCK_Connector.h
               LSOCK_Dgram.h
               LSOCK_Stream.h
               Lib_Find.h
               Local_Memory_Pool.h
               Local_Name_Space_T.h
               Lock.h
               Lock_Adapter_T.h
               Log_Category.h
               Log_Msg.h
               Log_Msg_Backend.h
               Log_Msg_Callback.h
               Log_Msg_IPC.h
               Log_Msg_NT_Event_Log.h
               Log_Msg_UNIX_Syslog.h
               Log_Priority.h
               Log_Record.h
               Logging_Strategy.h
               MEM_Acceptor.h
               MEM_Addr.h
               MEM_Connector.h
               MEM_IO.h
               MEM_SAP.h
               MEM_Stream.h
               MMAP_Memory_Pool.h
               Malloc.h
               Malloc_Allocator.h
               Malloc_Base.h
               Malloc_T.h
               Managed_Object.h
               Manual_Event.h
               Map_Manager.h
               Map_T.h
               Mem_Map.h
               Memory_Pool.h
               Message_Block.h
               Message_Block_T.h
               Message_Queue.h
               Message_Queue_NT.h
               Message_Queue_T.h
               Message_Queue_Vx.h
               Method_Request.h
               Metrics_Cache.h
               Metrics_Cache_T.h
               Min_Max.h
               Module.h
               Monitor_Admin.h
               Monitor_Admin_Manager.h
               Monitor_Base.h
               Monitor_Control_Action.h
               Monitor_Control_Types.h
               Monitor_Point_Registry.h
               Monitor_Size.h
               Monotonic_Time_Policy.h
               Msg_WFMO_Reactor.h
               Multihomed_INET_Addr.h
               Mutex.h
               Netlink_Addr.h
               Node.h
               Notification_Queue.h
               Notification_Strategy.h
               Null_Barrier.h
               Null_Condition.h
               Null_Mutex.h
               Null_Semaphore.h
               Numeric_Limits.h
               OS.h
               OS_Errno.h
               OS_Log_Msg_Attributes.h
               OS_Memory.h
               OS_NS_Thread.h
               OS_NS_arpa_inet.h
               OS_NS_ctype.h
               OS_NS_devctl.h
               OS_NS_dirent.h
               OS_NS_dlfcn.h
               OS_NS_errno.h
               OS_NS_fcntl.h
               OS_NS_macros.h
               OS_NS_math.h
               OS_NS_netdb.h
               OS_NS_poll.h
               OS_NS_pwd.h
               OS_NS_regex.h
               OS_NS_signal.h
               OS_NS_stdio.h
               OS_NS_stdlib.h
               OS_NS_string.h
               OS_NS_strings.h
               OS_NS_stropts.h
               OS_NS_sys_mman.h
               OS_NS_sys_msg.h
               OS_NS_sys_resource.h
               OS_NS_sys_select.h
               OS_NS_sys_sendfile.h
               OS_NS_sys_shm.h
               OS_NS_sys_socket.h
               OS_NS_sys_stat.h
               OS_NS_sys_time.h
               OS_NS_sys_uio.h
               OS_NS_sys_utsname.h
               OS_NS_sys_wait.h
               OS_NS_time.h
               OS_NS_unistd.h
               OS_NS_wchar.h
               OS_NS_wctype.h
               OS_QoS.h
               OS_TLI.h
               OS_Thread_Adapter.h
               OS_main.h
               Obchunk.h
               Object_Manager.h
               Object_Manager_Base.h
               Obstack.h
               Obstack_T.h
               PI_Malloc.h
               POSIX_Asynch_IO.h
               POSIX_CB_Proactor.h
               POSIX_Proactor.h
               Pagefile_Memory_Pool.h
               Pair_T.h
               Parse_Node.h
               Ping_Socket.h
               Pipe.h
               Priority_Reactor.h
               Proactor.h
               Proactor_Impl.h
               Process.h
               Process_Manager.h
               Process_Mutex.h
               Process_Semaphore.h
               Profile_Timer.h
               RB_Tree.h
               RW_Mutex.h
               RW_Process_Mutex.h
               RW_Thread_Mutex.h
               Reactor.h
               Reactor_Impl.h
               Reactor_Notification_Strategy.h
               Reactor_Timer_Interface.h
               Reactor_Token_T.h
               Read_Buffer.h
               Recursive_Thread_Mutex.h
               Recyclable.h
               Refcountable_T.h
               Refcounted_Auto_Ptr.h
               Registry.h
               Reverse_Lock_T.h
               SOCK.h
               SOCK_Acceptor.h
               SOCK_CODgram.h
               SOCK_Connector.h
               SOCK_Dgram.h
               SOCK_Dgram_Bcast.h
               SOCK_Dgram_Mcast.h
               SOCK_IO.h
               SOCK_Netlink.h
               SOCK_SEQPACK_Acceptor.h
               SOCK_SEQPACK_Association.h
               SOCK_SEQPACK_Connector.h
               SOCK_Stream.h
               SPIPE.h
               SPIPE_Acceptor.h
               SPIPE_Addr.h
               SPIPE_Connector.h
               SPIPE_Stream.h
               SString.h
               SStringfwd.h
               SUN_Proactor.h
               SV_Message.h
               SV_Message_Queue.h
               SV_Semaphore_Complex.h
               SV_Semaphore_Simple.h
               SV_Shared_Memory.h
               Sample_History.h
               Sbrk_Memory_Pool.h
               Sched_Params.h
               Select_Reactor.h
               Select_Reactor_Base.h
               Select_Reactor_T.h
               Semaphore.h
               Shared_Memory.h
               Shared_Memory_MM.h
               Shared_Memory_Pool.h
               Shared_Memory_SV.h
               Sig_Adapter.h
               Sig_Handler.h
               Signal.h
               Singleton.h
               Sock_Connect.h
               Stack_Trace.h
               Static_Object_Lock.h
               Stats.h
               Strategies_T.h
               Stream.h
               Stream_Modules.h
               String_Base.h
               String_Base_Const.h
               Svc_Conf.h
               Svc_Conf_Param.h
               Svc_Conf_Token_Table.h
               Svc_Conf_Tokens.h
               Svc_Handler.h
               Synch.h
               Synch_Options.h
               Synch_Traits.h
               System_Time.h
               TLI.h
               TLI_Acceptor.h
               TLI_Connector.h
               TLI_Stream.h
               TP_Reactor.h
               TSS_Adapter.h
               TSS_T.h
               TTY_IO.h
               Task.h
               Task_Ex_T.h
               Task_T.h
               Test_and_Set.h
               Thread.h
               Thread_Adapter.h
               Thread_Control.h
               Thread_Exit.h
               Thread_Hook.h
               Thread_Manager.h
               Thread_Mutex.h
               Thread_Semaphore.h
               Throughput_Stats.h
               Time_Policy.h
               Time_Policy_T.h
               Time_Value.h
               Time_Value_T.h
               Timeprobe.h
               Timeprobe_T.h
               Timer_Hash.h
               Timer_Hash_T.h
               Timer_Heap.h
               Timer_Heap_T.h
               Timer_List.h
               Timer_List_T.h
               Timer_Queue.h
               Timer_Queue_Adapters.h
               Timer_Queue_Iterator.h
               Timer_Queue_T.h
               Timer_Queuefwd.h
               Timer_Wheel.h
               Timer_Wheel_T.h
               Token.h
               Tokenizer_T.h
               Trace.h
               Truncate.h
               Typed_SV_Message.h
               Typed_SV_Message_Queue.h
               UNIX_Addr.h
               UPIPE_Acceptor.h
               UPIPE_Addr.h
               UPIPE_Connector.h
               UPIPE_Stream.h
               Unbounded_Queue.h
               Unbounded_Set.h
               Unbounded_Set_Ex.h
               Value_Ptr.h
               Vector_T.h
               Version.h
               Versioned_Namespace.h
               WFMO_Reactor.h
               WIN32_Asynch_IO.h
               WIN32_Proactor.h
               ace_wchar.h
               checked_iterator.h
               config-WinCE.h
               config-aix-5.x.h
               config-aix-7.h
               config-all.h
               config-android.h
               config-cygwin32.h
               config-darwin.h
               config-face-conftest.h
               config-face-safety.h
               config-freebsd.h
               config-g++-common.h
               config-hpux-11.00.h
               config-icc-common.h
               config-integritySCA.h
               config-kfreebsd.h
               config-linux.h
               config-lite.h
               config-lynxos-178.h
               config-lynxos.h
               config-macosx-elcapitan.h
               config-macosx-iOS-hardware.h
               config-macosx-iOS-simulator.h
               config-macosx-jaguar.h
               config-macosx-leopard.h
               config-macosx-lion.h
               config-macosx-mavericks.h
               config-macosx-mountainlion.h
               config-macosx-panther.h
               config-macosx-sierra.h
               config-macosx-snowleopard.h
               config-macosx-tiger.h
               config-macosx-yosemite.h
               config-macosx.h
               config-macros.h
               config-netbsd.h
               config-openbsd.h
               config-openvms.h
               config-pharlap.h
               config-posix-nonetworking.h
               config-posix.h
               config-qnx.h
               config-rtems.h
               config-suncc-common.h
               config-sunos5.10.h
               config-sunos5.11.h
               config-sunos5.4-g++.h
               config-sunos5.4-sunc++-4.x.h
               config-sunos5.5.h
               config-sunos5.6.h
               config-sunos5.7.h
               config-sunos5.8.h
               config-sunos5.9.h
               config-vxworks.h
               config-vxworks6.4.h
               config-vxworks6.5.h
               config-vxworks6.6.h
               config-vxworks6.7.h
               config-vxworks6.8.h
               config-vxworks6.9.h
               config-vxworks7.0.h
               config-win32-borland.h
               config-win32-cegcc.h
               config-win32-common.h
               config-win32-dmc.h
               config-win32-interix.h
               config-win32-mingw.h
               config-win32-mingw64.h
               config-win32-msvc-10.h
               config-win32-msvc-11.h
               config-win32-msvc-12.h
               config-win32-msvc-14.h
               config-win32-msvc-7.h
               config-win32-msvc-8.h
               config-win32-msvc-9.h
               config-win32-msvc.h
               config-win32.h
               config-windows.h
               iosfwd.h
               post.h
               pre.h
               streams.h
               svc_export.h
  INLINE_FILES ACE.inl
               ARGV.inl
               Activation_Queue.inl
               Active_Map_Manager.inl
               Active_Map_Manager_T.inl
               Addr.inl
               Argv_Type_Converter.inl
               Array_Base.inl
               Array_Map.inl
               Asynch_IO_Impl.inl
               Atomic_Op.inl
               Atomic_Op_GCC_T.inl
               Atomic_Op_T.inl
               Auto_Event.inl
               Auto_Functor.inl
               Auto_IncDec_T.inl
               Auto_Ptr.inl
               Barrier.inl
               Base_Thread_Adapter.inl
               Based_Pointer_T.inl
               Basic_Stats.inl
               Bound_Ptr.inl
               CDR_Base.inl
               CDR_Size.inl
               CDR_Stream.inl
               Cache_Map_Manager_T.inl
               Caching_Strategies_T.inl
               Capabilities.inl
               Cleanup.inl
               Codeset_Registry.inl
               Condition_Attributes.inl
               Condition_T.inl
               Condition_Thread_Mutex.inl
               Configuration.inl
               Containers.inl
               Containers_T.inl
               Countdown_Time_T.inl
               DEV.inl
               DEV_Addr.inl
               DEV_Connector.inl
               DEV_IO.inl
               Date_Time.inl
               Dev_Poll_Reactor.inl
               Dirent.inl
               Dirent_Selector.inl
               Dynamic.inl
               Dynamic_Message_Strategy.inl
               Dynamic_Service.inl
               Env_Value_T.inl
               Event.inl
               Event_Base.inl
               Event_Handler.inl
               Event_Handler_Handle_Timeout_Upcall.inl
               Event_Handler_T.inl
               FIFO.inl
               FIFO_Recv.inl
               FIFO_Recv_Msg.inl
               FIFO_Send.inl
               FIFO_Send_Msg.inl
               FILE.inl
               FILE_Addr.inl
               FILE_Connector.inl
               FILE_IO.inl
               File_Lock.inl
               Flag_Manip.inl
               Framework_Component.inl
               Functor.inl
               Functor_String.inl
               Functor_T.inl
               Get_Opt.inl
               Guard_T.inl
               Handle_Gobbler.inl
               Handle_Set.inl
               Hash_Cache_Map_Manager_T.inl
               Hash_Map_Manager_T.inl
               Hash_Map_With_Allocator_T.inl
               Hash_Multi_Map_Manager_T.inl
               Hashable.inl
               High_Res_Timer.inl
               INET_Addr.inl
               IOStream_T.inl
               IO_Cntl_Msg.inl
               IO_SAP.inl
               IPC_SAP.inl
               Intrusive_Auto_Ptr.inl
               Intrusive_List.inl
               Intrusive_List_Node.inl
               LSOCK.inl
               LSOCK_CODgram.inl
               LSOCK_Connector.inl
               LSOCK_Dgram.inl
               LSOCK_Stream.inl
               Lock.inl
               Lock_Adapter_T.inl
               Log_Category.inl
               Log_Msg.inl
               Log_Record.inl
               MEM_Acceptor.inl
               MEM_Addr.inl
               MEM_Connector.inl
               MEM_IO.inl
               MEM_SAP.inl
               MEM_Stream.inl
               MMAP_Memory_Pool.inl
               Malloc.inl
               Malloc_Allocator.inl
               Malloc_T.inl
               Managed_Object.inl
               Manual_Event.inl
               Map_Manager.inl
               Map_T.inl
               Mem_Map.inl
               Message_Block.inl
               Message_Block_T.inl
               Message_Queue.inl
               Message_Queue_NT.inl
               Message_Queue_Vx.inl
               Metrics_Cache_T.inl
               Module.inl
               Monitor_Base.inl
               Monotonic_Time_Policy.inl
               Msg_WFMO_Reactor.inl
               Multihomed_INET_Addr.inl
               Mutex.inl
               Netlink_Addr.inl
               Notification_Queue.inl
               Notification_Strategy.inl
               OS_Errno.inl
               OS_Log_Msg_Attributes.inl
               OS_NS_Thread.inl
               OS_NS_arpa_inet.inl
               OS_NS_ctype.inl
               OS_NS_devctl.inl
               OS_NS_dirent.inl
               OS_NS_dlfcn.inl
               OS_NS_errno.inl
               OS_NS_fcntl.inl
               OS_NS_math.inl
               OS_NS_netdb.inl
               OS_NS_poll.inl
               OS_NS_pwd.inl
               OS_NS_regex.inl
               OS_NS_signal.inl
               OS_NS_stdio.inl
               OS_NS_stdlib.inl
               OS_NS_string.inl
               OS_NS_strings.inl
               OS_NS_stropts.inl
               OS_NS_sys_mman.inl
               OS_NS_sys_msg.inl
               OS_NS_sys_resource.inl
               OS_NS_sys_select.inl
               OS_NS_sys_sendfile.inl
               OS_NS_sys_shm.inl
               OS_NS_sys_socket.inl
               OS_NS_sys_stat.inl
               OS_NS_sys_time.inl
               OS_NS_sys_uio.inl
               OS_NS_sys_wait.inl
               OS_NS_time.inl
               OS_NS_unistd.inl
               OS_NS_wchar.inl
               OS_NS_wctype.inl
               OS_TLI.inl
               Obchunk.inl
               Object_Manager.inl
               Obstack_T.inl
               PI_Malloc.inl
               POSIX_Proactor.inl
               Pagefile_Memory_Pool.inl
               Pair_T.inl
               Ping_Socket.inl
               Pipe.inl
               Proactor.inl
               Process.inl
               Process_Manager.inl
               Process_Mutex.inl
               Process_Semaphore.inl
               Profile_Timer.inl
               RB_Tree.inl
               RW_Mutex.inl
               RW_Process_Mutex.inl
               RW_Thread_Mutex.inl
               Reactor.inl
               Reactor_Notification_Strategy.inl
               Read_Buffer.inl
               Recursive_Thread_Mutex.inl
               Recyclable.inl
               Refcountable_T.inl
               Refcounted_Auto_Ptr.inl
               Reverse_Lock_T.inl
               SOCK.inl
               SOCK_Acceptor.inl
               SOCK_CODgram.inl
               SOCK_Connector.inl
               SOCK_Dgram.inl
               SOCK_Dgram_Bcast.inl
               SOCK_Dgram_Mcast.inl
               SOCK_IO.inl
               SOCK_Netlink.inl
               SOCK_SEQPACK_Acceptor.inl
               SOCK_SEQPACK_Association.inl
               SOCK_SEQPACK_Connector.inl
               SOCK_Stream.inl
               SPIPE.inl
               SPIPE_Addr.inl
               SPIPE_Connector.inl
               SPIPE_Stream.inl
               SString.inl
               SV_Message.inl
               SV_Message_Queue.inl
               SV_Semaphore_Complex.inl
               SV_Semaphore_Simple.inl
               SV_Shared_Memory.inl
               Sample_History.inl
               Sched_Params.inl
               Select_Reactor_Base.inl
               Select_Reactor_T.inl
               Semaphore.inl
               Shared_Memory_MM.inl
               Shared_Memory_SV.inl
               Sig_Handler.inl
               Signal.inl
               Singleton.inl
               Stats.inl
               Strategies_T.inl
               Stream.inl
               String_Base.inl
               TLI.inl
               TLI_Connector.inl
               TLI_Stream.inl
               TP_Reactor.inl
               TSS_T.inl
               Task.inl
               Task_Ex_T.inl
               Task_T.inl
               Thread.inl
               Thread_Adapter.inl
               Thread_Control.inl
               Thread_Manager.inl
               Thread_Mutex.inl
               Thread_Semaphore.inl
               Time_Policy.inl
               Time_Policy_T.inl
               Time_Value.inl
               Time_Value_T.inl
               Timeprobe.inl
               Timer_Queue_Adapters.inl
               Timer_Queue_Iterator.inl
               Timer_Queue_T.inl
               Token.inl
               Typed_SV_Message.inl
               Typed_SV_Message_Queue.inl
               UNIX_Addr.inl
               UPIPE_Acceptor.inl
               UPIPE_Connector.inl
               UPIPE_Stream.inl
               Unbounded_Queue.inl
               Unbounded_Set.inl
               Unbounded_Set_Ex.inl
               Vector_T.inl
               WFMO_Reactor.inl
               ace_wchar.inl
  TEMPLATE_FILES Active_Map_Manager_T.cpp
                 Atomic_Op_GCC_T.cpp
                 Atomic_Op_T.cpp
                 Auto_IncDec_T.cpp
                 Based_Pointer_T.cpp
                 Cache_Map_Manager_T.cpp
                 Cached_Connect_Strategy_T.cpp
                 Caching_Strategies_T.cpp
                 Caching_Utility_T.cpp
                 Cleanup_Strategies_T.cpp
                 Condition_T.cpp
                 Containers_T.cpp
                 Countdown_Time_T.cpp
                 Dump_T.cpp
                 Env_Value_T.cpp
                 Event_Handler_T.cpp
                 Framework_Component_T.cpp
                 Functor_T.cpp
                 Guard_T.cpp
                 Hash_Cache_Map_Manager_T.cpp
                 Hash_Map_Manager_T.cpp
                 Hash_Map_With_Allocator_T.cpp
                 Hash_Multi_Map_Manager_T.cpp
                 IOStream_T.cpp
                 Local_Name_Space_T.cpp
                 Lock_Adapter_T.cpp
                 Malloc_T.cpp
                 Map_T.cpp
                 Message_Block_T.cpp
                 Message_Queue_T.cpp
                 Metrics_Cache_T.cpp
                 Obstack_T.cpp
                 Pair_T.cpp
                 Reactor_Token_T.cpp
                 Refcountable_T.cpp
                 Reverse_Lock_T.cpp
                 Select_Reactor_T.cpp
                 Strategies_T.cpp
                 TSS_T.cpp
                 Task_Ex_T.cpp
                 Task_T.cpp
                 Time_Policy_T.cpp
                 Time_Value_T.cpp
                 Timeprobe_T.cpp
                 Timer_Hash_T.cpp
                 Timer_Heap_T.cpp
                 Timer_List_T.cpp
                 Timer_Queue_T.cpp
                 Timer_Wheel_T.cpp
                 Tokenizer_T.cpp
                 Vector_T.cpp
)

if(ACE_SVCCONF)
  ace_target_cxx_sources(ACE
    SOURCE_FILES DLL.cpp
                 Dynamic_Service_Base.cpp
                 Dynamic_Service_Dependency.cpp
                 Encoding_Converter.cpp
                 Encoding_Converter_Factory.cpp
                 Parse_Node.cpp
                 Service_Config.cpp
                 Service_Gestalt.cpp
                 Service_Manager.cpp
                 Service_Object.cpp
                 Service_Repository.cpp
                 Service_Types.cpp
                 Shared_Object.cpp
                 Svc_Conf_Lexer.cpp
                 Svc_Conf_y.cpp
                 UTF16_Encoding_Converter.cpp
                 UTF32_Encoding_Converter.cpp
                 UTF8_Encoding_Converter.cpp
                 XML_Svc_Conf.cpp
    HEADER_FILES DLL.h
                 Dynamic_Service_Base.h
                 Dynamic_Service_Dependency.h
                 Encoding_Converter.h
                 Encoding_Converter_Factory.h
                 Parse_Node.h
                 Service_Config.h
                 Service_Gestalt.h
                 Service_Manager.h
                 Service_Object.h
                 Service_Repository.h
                 Service_Types.h
                 Shared_Object.h
                 Svc_Conf_Lexer.h
                 UTF16_Encoding_Converter.h
                 UTF32_Encoding_Converter.h
                 UTF8_Encoding_Converter.h
                 XML_Svc_Conf.h
    INLINE_FILES Service_Config.inl
                 Service_Gestalt.inl
                 Service_Object.inl
                 Service_Repository.inl
                 Service_Types.inl
                 Shared_Object.inl
                 UTF16_Encoding_Converter.inl
  )
endif()
if(ACE_CODECS)
  ace_target_cxx_sources(ACE
    SOURCE_FILES Codecs.cpp
    HEADER_FILES Codecs.h
  )
endif()
if(ACE_TOKEN)
  ace_target_cxx_sources(ACE
    SOURCE_FILES Local_Tokens.cpp
                 Remote_Tokens.cpp
                 Token_Collection.cpp
                 Token_Invariants.cpp
                 Token_Manager.cpp
                 Token_Request_Reply.cpp
    HEADER_FILES Local_Tokens.h
                 Remote_Tokens.h
                 Token_Collection.h
                 Token_Invariants.h
                 Token_Manager.h
                 Token_Request_Reply.h
    INLINE_FILES Local_Tokens.inl
                 Remote_Tokens.inl
                 Token_Collection.inl
                 Token_Manager.inl
                 Token_Request_Reply.inl
  )
endif()
if(ACE_OTHER)
  ace_target_cxx_sources(ACE
    SOURCE_FILES Local_Name_Space.cpp
                 NT_Service.cpp
                 Name_Proxy.cpp
                 Name_Request_Reply.cpp
                 Name_Space.cpp
                 Naming_Context.cpp
                 Registry_Name_Space.cpp
                 Remote_Name_Space.cpp
    HEADER_FILES Local_Name_Space.h
                 NT_Service.h
                 Name_Proxy.h
                 Name_Request_Reply.h
                 Name_Space.h
                 Naming_Context.h
                 Registry_Name_Space.h
                 Remote_Name_Space.h
    INLINE_FILES NT_Service.inl
                 Naming_Context.inl
  )
endif()
if(ACE_FILECACHE)
  ace_target_cxx_sources(ACE
    SOURCE_FILES Filecache.cpp
    HEADER_FILES Filecache.h
  )
endif()
if(ACE_UUID)
  ace_target_cxx_sources(ACE
    SOURCE_FILES UUID.cpp
    HEADER_FILES UUID.h
    INLINE_FILES UUID.inl
  )
endif()
if(ACE_HAS_ATM)
  ace_target_cxx_sources(ACE
    SOURCE_FILES ATM_Acceptor.cpp
                 ATM_Addr.cpp
                 ATM_Connector.cpp
                 ATM_Params.cpp
                 ATM_QoS.cpp
                 ATM_Stream.cpp
                 XTI_ATM_Mcast.cpp
    HEADER_FILES ATM_Acceptor.h
                 ATM_Addr.h
                 ATM_Connector.h
                 ATM_Params.h
                 ATM_QoS.h
                 ATM_Stream.h
                 XTI_ATM_Mcast.h
    INLINE_FILES ATM_Acceptor.inl
                 ATM_Addr.inl
                 ATM_Connector.inl
                 ATM_Params.inl
                 ATM_QoS.inl
                 ATM_Stream.inl
                 XTI_ATM_Mcast.inl
  )
endif()
include("os_include/CMakeLists.txt")
include("os_include/arpa/CMakeLists.txt")
include("os_include/net/CMakeLists.txt")
include("os_include/netinet/CMakeLists.txt")
include("os_include/sys/CMakeLists.txt")
file(GLOB config_files config-*.h)

ace_target_cxx_sources(ACE
  HEADER_FILES ${config_files}
  SUBGROUP \\config
)


## use target_link_libraries() for the following
## libraries instead of specified inside ace_add_lib()
## to avoid unnecessary checking for
## the exisitence of the libraries.
target_link_libraries(ACE PUBLIC
  ${CMAKE_THREAD_LIBS_INIT}
  ${AIO_LIBRARY}
  ${CMAKE_DL_LIBS}
)

if (BUILD_SHARED_LIBS)
  target_link_libraries(ACE PUBLIC
    ${CMAKE_DL_LIBS}
  )
else(BUILD_SHARED_LIBS)
  target_compile_definitions(ACE INTERFACE ACE_AS_STATIC_LIBS)
endif(BUILD_SHARED_LIBS)

add_subdirectory(Compression)
add_subdirectory(ETCL)
add_subdirectory(FlReactor)
add_subdirectory(Monitor_Control)
add_subdirectory(QoS)
add_subdirectory(QtReactor)
add_subdirectory(SSL)
add_subdirectory(TkReactor)
add_subdirectory(XML_Utils)
add_subdirectory(XtReactor)
